# Supervoxel-3D-Registration

./: .gitignore  README.md
data/: scan_0180.pcd  scan_0185.pcd  trans_base  trans_normal  trans_result  trans_result_180_185  trans_result_2  trans_result_approx_180_185
src/: CMakeLists.txt  CMakeLists.txt~  main.cpp  optimize_utils.hpp  supervoxel_cluster_search.cpp  supervoxel_cluster_search.h  supervoxel_cluster_search.hpp  supervoxel_mapping.cpp  supervoxel_mapping.hpp  supervoxel_mi.cpp  supervoxel_mi_smooth.cpp  supervoxel_octree_pointcloud_adjacency.h  supervoxel_octree_pointcloud_adjacency.hpp  supervoxel_optimize.cpp  supervoxel_optimize.h  supervoxel_registration.cpp  supervoxel_registration.h  supervoxel_util.hpp  util.cpp  util.hpp
